Bug 147144 - Writer crash after adding rectangle, add link and delete it
Summary: Writer crash after adding rectangle, add link and delete it
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords: haveBacktrace
: 147577 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-02 18:59 UTC by grofaty
Modified: 2022-02-21 14:38 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
bt with debug symbols (3.76 KB, text/plain)
2022-02-02 20:09 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description grofaty 2022-02-02 18:59:00 UTC
Description:
Writer crashes after adding line shape object, add link on it and double click on link.

Steps to Reproduce:
1. In Writer: Insert | Shape | Basic Shapes | Rectangle.
2. Draw rectangle in document.
3. Leave it selected and Insert | Hyperlink.
4. In URL link type in e.g. www.google.com and press OK button.
5. Press <Delete> key and after a second Writer crashes.

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
I have installed LibreOffice from flatpak on Ubuntu 20.04.
From Help | About:

Version: 7.3.0.3 / LibreOffice Community
Build ID: 0f246aa12d0eee4a0f7adcefbf7c878fc2238db3
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Flatpak
Calc: threaded
Comment 1 Julien Nabet 2022-02-02 20:09:46 UTC
Created attachment 177999 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 2 raal 2022-02-02 20:13:46 UTC
New feature: https://wiki.documentfoundation.org/ReleaseNotes/7.3#General_improvements

Adding CC to Samuel Mehrbrodt
Comment 3 Julien Nabet 2022-02-02 20:17:47 UTC
patch waiting for review here:
https://gerrit.libreoffice.org/c/core/+/129388

Since there were "rMarkList.GetMark(0) != nullptr" at other locations or "rMarkList.GetMarkCount()", I did the same.
Comment 4 Commit Notification 2022-02-03 12:38:23 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/91fd537a4517409da87229fd7c0f21d269973d43

tdf#147144: Writer crash after adding rectangle, add link and delete it

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2022-02-03 12:40:41 UTC
Patch waiting for review for 7.3 here:
https://gerrit.libreoffice.org/c/core/+/129344
Comment 6 Commit Notification 2022-02-04 13:49:03 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/fbd98d923e75c90e750bd5d5a6cca80a75ed1ca9

tdf#147144: Writer crash after adding rectangle, add link and delete it

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2022-02-21 14:38:31 UTC
*** Bug 147577 has been marked as a duplicate of this bug. ***